# imd1107-nlp

./: .gitignore  LICENSE  Notebook_01-ML_recap.ipynb  Notebook_01.ipynb  Notebook_03-Datasets.ipynb  Notebook_03.ipynb  Notebook_04.ipynb  Notebook_05_extra_viewing_svd.xlsx  Notebook_06-Supervised_tasks.ipynb  Notebook_06.ipynb  Notebook_07.ipynb  Notebook_08-Transfer_learning.ipynb  Notebook_08.ipynb  Notebook_08a.ipynb  Notebook_09-RNNs.ipynb  Notebook_09.ipynb  Notebook_10-Transformers.ipynb  Notebook_10.ipynb  Notebook_11.ipynb  Notebook_12-Large_language_models.ipynb  Notebook_12.ipynb  Notebook_13-Agentic_behavior_and_tool_calling.ipynb  Notebook_13.ipynb  Notebook_14-Retrieval_augmented_generation.ipynb  Notebook_14.ipynb  Notebook_15-Real_world_application.ipynb  Notebook_15.ipynb  README.md  create_env.sh  download_datasets_and_binaries.sh  environment.yml  pyproject.toml  tmp.ipynb
.devcontainer/: Dockerfile  devcontainer.json
helpers/: misc.py  text.py
