[tool.poetry]
name = "imd1107-nlp"
version = "0.1.0"
description = ""
authors = ["Elias Jacob <elias.jacob@ufrn.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# ===========================================
# =========== START OF TORCH PART ===========
torch       = { version = "^2.6", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
torchvision = { version = "^0.21", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
skorch = "^1.1.0"
wordcloud = "^1.9.4"
xgboost = "^2.1.4"
lightgbm = "^4.6.0"
scikit-learn = "^1.6.1"
langgraph = "^0.3.5"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
evaluate = "^0.4.3"
accelerate = "^1.4.0"
gensim = "^4.3.3"
nbformat = "^5.10.4"
nltk = "^3.9.1"
pyldavis = "^3.4.1"
spacy = "^3.8.4"
beautifulsoup4 = "^4.13.3"
langchain-community = "^0.3.19"
langchain-openai = "^0.3.8"
langchain-experimental = "^0.3.4"
langchain-chroma = "^0.2.2"
langchain-huggingface = "^0.1.2"
langchain-ollama = "^0.2.3"
langchain-anthropic = "^0.3.9"
pypdf = "^5.3.1"
scikit-optimize = "^0.10.2"
ripgrep = "^14.1.0"
plotly = "^6.0.0"
plotly-express = "^0.4.1"
langchain = "^0.3.20"
bertopic = "^0.16.4"
datasets = "^3.3.2"
transformers = "^4.49.0"
fasttext = "^0.9.3"
umap-learn = "^0.5.7"
mwparserfromhell = "^0.6.6"
seqeval = "^1.2.2"
nbconvert = "^7.16.6"
wandb = "^0.19.8"
sentence-transformers = "^3.4.1"
unstructured = "^0.17.0"
youtube-transcript-api = "^1.0.0"
langchain-yt-dlp = "^0.0.8"
langchain-text-splitters = "^0.3.6"
tiktoken = "^0.9.0"

[tool.poetry.group.cuda]
optional = true

# https://github.com/pytorch/pytorch/blob/main/RELEASE.md#release-compatibility-matrix
[tool.poetry.group.cuda.dependencies]
torch       = { version = "^2.6", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
torchvision = { version = "^0.21", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }

[tool.poetry.extras]
cpu  = ["torch", "torchvision"]
cuda = ["torch", "torchvision"]

[[tool.poetry.source]]
name     = "pytorch-cuda"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cu124"

[[tool.poetry.source]]
name     = "pytorch-cpu"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cpu"

# ============ END OF TORCH PART ============
# ===========================================

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]